--- a/public/privacy.html
+++ b/public/privacy.html
@@ -43,7 +43,7 @@
 
   <!-- Header -->
   <header>
-    <h1>Meet Privacy Policy</h1>
+    <h1>Meet App - Privacy Policy</h1>
   </header>
   <!-- body -->
   <section>
